payments: Add an amount field to the stripe payment form.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6638,7 +6638,7 @@ body.gold .buttons li.comment-save-button { display: inline; }
     white-space:nowrap;
     font-size:smaller;
 }
-
+#stripe-payment .credit-card-amount { text-align: left; }
 #stripe-payment th label { display:inline; }
 #stripe-payment td input {
     font-size:small;
