--- a/r2/r2/templates/goldpayment.html
+++ b/r2/r2/templates/goldpayment.html
@@ -157,6 +157,10 @@
     </div>
     <table class="credit-card-input">
       <tr>
+        <th><label>${_('amount')}</label></th>
+        <th class="credit-card-amount">${thing.price}</th>
+      </tr>
+      <tr>
         <th><label>${_('name')}</label></th>
         <td><input type="text" autocomplete="off" class="card-name"></td>
       </tr>
