gold partners: Use "last" class to remove spurious separator.

--- a/r2/r2/templates/goldpartnerspage.html
+++ b/r2/r2/templates/goldpartnerspage.html
@@ -100,7 +100,7 @@
                    static('gold/partner-urbilis.png'),
                    _('# Urbilis Urban Gardening\n'
                      '$10 off purchases of $50 or more.'),
-                   'new',
+                   'new last',
                    'claim')}
 
     ${goldinfo_footer()}
