--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -24,7 +24,7 @@
   from r2.lib.template_helpers import static
 %>
 <%namespace file="less.html" import="less_stylesheet"/>
-<%namespace file="utils.html" import="tags, _md"/>
+<%namespace file="utils.html" import="classes, _md"/>
 <%inherit file="reddit.html"/>
 
 <%def name="stylesheet()">
@@ -33,7 +33,7 @@
 </%def>
 
 <%def name="feature_item(name, img_src, description_md, extra_class='')">
-  <section id="${name}" ${tags(_class=extra_class)}>
+  <section id="${name}" ${classes(extra_class)}>
     <div class="sample"><img src="${img_src}" alt=""></div>
     <div class="description">
       %if 'new' in extra_class.split():
@@ -47,11 +47,20 @@
   </section>
 </%def>
 
-<%def name="goldinfo_header(title, description)">
-  <header>
+<%def name="partner_item(name, description_html)">
+  <a href="/gold/partners#${name}" target="_blank">
+    <div class="label-container"><span class="partner-label">${unsafe(description_html)}</span></div>
+    <div class="logo"><img src="${static('gold/partner-%s.png' % name)}" alt="${name}"></div>
+  </a>
+</%def>
+
+<%def name="goldinfo_header(title, description=None, css_class=None)">
+  <header ${classes(css_class)}>
     <img class="insignia" src="${static('gold/gold-insignia-big.png')}" alt="">
     <h1>${title}</h1>
-    <p>${description}</p>
+    % if description:
+      <p>${description}</p>
+    % endif
     <div class="actions">
       <a class="buy-gold-button" href="/gold">${_('buy reddit gold')}</a>
       <span class="or">${_('or')}</span>
@@ -69,14 +78,24 @@
 </%def>
 
 <%def name="content()">
+  <section id="gold-letter">
+    <div class="letter-body">
+      <img class="logo" src="${static('gold/reddit-gold-logo.png')}" alt="reddit gold">
+      ${_md(
+        "reddit gold is our premium membership program. It comes with extra features to make your experience here better as well as special benefits from gold partners for exceptional products and services.\n\n"
+        "reddit takes no payment from gold partners for being in this program. We ask that they give all the benefits to you, our users. We hope in turn that this helps make gold a program worth subscribing to.\n\n"
+        "If you have questions about any of the benefits, please visit /r/goldbenefits. New benefits and features will also be announced there, and we hope you'll enjoy them."
+      )}
+      <div class="signature"><img src="${static('gold/letter-signature.png')}" alt="yishan"><a href="/u/yishan" target="_blank">/u/yishan</a></div>
+    </div>
+  </section>
   <section id="about-gold">
-    ${goldinfo_header(_('Make reddit better.'),
-                      _('reddit gold adds shiny extra features to your account that are made possible thanks to support from people like you.'))}
-    ${feature_item('filter-all',
-      static('gold/sample-filterall.png'),
+    ${goldinfo_header(_('You can make reddit better.'), css_class='short')}
+    ${feature_item('comment-highlighting',
+      static('gold/sample-commenthighlighting.png'),
       _(
-        "# Filter specific subreddits from /r/all.\n"
-        "Are there subreddits you don't want to see? Customize /r/all by removing them with a url like /r/all-operative-badger (up to ~300 removals - limited by maximum url length)."
+        '# New comment highlighting.\n'
+        "What's new? Highlight which comments are new since the last time you viewed a thread."
       ))}
     ${feature_item('username-notifications',
       static('gold/sample-butler.png'),
@@ -85,6 +104,22 @@
         """Want to say "boo" when people talk about you?  """
         """Get an orangered whenever someone "/u/" mentions your username in a comment."""
       ), "new")}
+    <section id="partner-benefits">
+        <h1>${_('Awesome stuff for gold members:')}</h1>
+        <ul>
+          <li>${partner_item('backblaze', 'data backups<br>(sleep soundly)')}</li>
+          <li>${partner_item('uniqlo', 'cool clothes')}</li>
+          <li>${partner_item('goldbely', 'special foods from around the country')}</li>
+          <li>${partner_item('empiremayo', 'tasty spreads')}</li>
+          <li>${partner_item('urbilis', 'high-end home gardening')}</li>
+        </ul>
+    </section>
+    ${feature_item('filter-all',
+      static('gold/sample-filterall.png'),
+      _(
+        "# Filter specific subreddits from /r/all.\n"
+        "Are there subreddits you don't want to see? Customize /r/all by removing them with a url like /r/all-operative-badger (up to ~300 removals - limited by maximum url length)."
+      ))}
     ${feature_item('more-comments',
       static('gold/sample-morecomments.png'),
       _(
@@ -92,12 +127,6 @@
         'Our servers work harder for gold members.  \n'
         'Subscribe to up to 100 subreddits on your front page.  \n'
         'Read comment threads 1500 comments at a time.'
-      ))}
-    ${feature_item('comment-highlighting',
-      static('gold/sample-commenthighlighting.png'),
-      _(
-        '# New comment highlighting.\n'
-        "What's new? Highlight which comments are new since the last time you viewed a thread."
       ))}
     ${feature_item('save-comments',
       static('gold/sample-savecomments.png'),
@@ -123,7 +152,6 @@
       <ul>
         <li><strong>${_('The Lounge.')}</strong>&#32;${_('Access to a super-secret members-only community that may or may not exist.')}</li>
         <li><strong>${_('Beta test new features.')}</strong>&#32;${_('We occasionally invite gold members to try out new features first.')}</li>
-        <li><strong><a href="/gold/partners">${_('Deals from gold partners.')}</a></strong>&#32;${strings.gold_partners_description}</li>
         <li><strong>${_('A trophy on your user page.')}</strong>&#32;${_('As thanks for supporting reddit gold.')}</li>
         <li><strong>${_('More to come.')}</strong>&#32;${_("We have many more ideas for gold features, and will add to this list in the future.")}</li>
       </ul>
