gold partners: add Betabrand

--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -117,6 +117,7 @@
           <li>${partner_item('uniqlo', 'cool clothes')}</li>
           <li>${partner_item('goldbely', 'special foods from around the country')}</li>
           <li>${partner_item('empiremayo', 'tasty spreads')}</li>
+          <li>${partner_item('betabrand', 'unique online fashions')}</li>
           <li>${partner_item('urbilis', 'high-end home gardening')}</li>
         </ul>
     </section>
