--- a/r2/r2/templates/goldpartnerspage.html
+++ b/r2/r2/templates/goldpartnerspage.html
@@ -70,6 +70,14 @@
                    'http://backblaze.com',
                    _('# Backblaze Online Backup\n'
                      '3 months of free service from Backblaze Online Backup.'),
+                   'claim')}
+
+    ${partner_item('betabrand',
+                   _("Presently Pantless? Get 20% off all stylish leg coverings at Betabrand.com, from Karate Casual Drawstring Trousers to Sons of Britches Jeans to Dress Pant Sweatpants. (Or enjoy your discount on any product.)"),
+                   static('gold/partner-betabrand.png'), 
+                   'http://betabrand.com',
+                   _('# Betabrand Unique Online Fashions\n'
+                     '20% off any item in our collection.'),
                    'new',
                    'claim')}
 
@@ -79,7 +87,6 @@
                    'http://empiremayo.com',
                    _('# Empire Mayonnaise\n'
                      '15% discount (two uses per customer).'),
-                   'new',
                    'claim')}
 
     ${partner_item('goldbely',
@@ -88,7 +95,6 @@
                    'http://goldbely.com',
                    _('# Goldbely Food Explorers\n'
                      '$20 off purchases of $50 or more.'),
-                   'new',
                    'https://www.goldbely.com/reddit-gold',
                    _('visit Goldbely'))}
 
@@ -98,7 +104,7 @@
                    'http://uniqlo.com/us/',
                    _('# Uniqlo Clothing\n'
                      'With our "Golden Tikkit" program, one lucky gold member will be getting some sweet new digs from Uniqlo every week.'),
-                   'new')}
+                   )}
 
     ${partner_item('urbilis',
                    _("Claim your code below, then use it during the second step of the checkout process at http://urbilis.com."),
@@ -106,7 +112,7 @@
                    'http://urbilis.com',
                    _('# Urbilis Urban Gardening\n'
                      '$10 off purchases of $50 or more.'),
-                   'new last',
+                   'last',
                    'claim')}
 
     ${goldinfo_footer()}
