gold partners: fix Goldbely button

--- a/r2/r2/templates/goldpartnerspage.html
+++ b/r2/r2/templates/goldpartnerspage.html
@@ -95,8 +95,8 @@
                    'http://goldbely.com',
                    _('# Goldbely Food Explorers\n'
                      '$20 off purchases of $50 or more.'),
-                   'https://www.goldbely.com/reddit-gold',
-                   _('visit Goldbely'))}
+                   button_dest='https://www.goldbely.com/reddit-gold',
+                   button_label=_('visit Goldbely'))}
 
     ${partner_item('uniqlo',
                    _("Keep an eye on your reddit PMs, as once a week Uniqlo will be sending out a message to a lucky gold member. Redeem your free prize within 24 hours, and you'll be lookin' snazzy in no time!"),
