subreddit traffic: Link to subreddit search by time period.
Traffic spikes on the subreddit traffic pages are currently very opaque.
There's no simple way to determine what could have caused a big change.

This makes the date/time column of subreddit traffic tables link to
timestamp-limited subreddit search for that subreddit.  While this
doesn't cover external referrers etc. it should give some insight into
traffic.

--- a/r2/r2/templates/timeserieschart.html
+++ b/r2/r2/templates/timeserieschart.html
@@ -52,12 +52,18 @@
   % endif
   >
   <th data-value="${js_timestamp(date)}" scope="row">
+      % if thing.make_period_link:
+      <a href="${thing.make_period_link(thing.interval, date)}">
+      % endif
       % if thing.interval == "hour":
       ${babel.dates.format_datetime(date, format="short", locale=c.locale)}
       % elif thing.interval == "day":
       ${babel.dates.format_date(date, format="short", locale=c.locale)}
       % else:
       ${month_names[date.month]}
+      % endif
+      % if thing.make_period_link:
+      </a>
       % endif
   </th>
   % for datum in data:
