gold partners: Updates and additions
Add Bart's Bakery, iFixit, Outgrow.me, redditgifts, and Uber
Various copy/logo updates

--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -119,6 +119,11 @@
           <li>${partner_item('empiremayo', 'tasty spreads')}</li>
           <li>${partner_item('betabrand', 'unique online fashions')}</li>
           <li>${partner_item('urbilis', 'high-end home gardening')}</li>
+          <li>${partner_item('redditgifts', 'reddit bazaar')}</li>
+          <li>${partner_item('bartsbakery', 'delicious cookies')}</li>
+          <li>${partner_item('outgrowme', 'crowd-funded commodities')}</li>
+          <li>${partner_item('uber', 'chauffeur on-demand')}</li>
+          <li>${partner_item('ifixit', 'technological rectifications')}</li>
         </ul>
     </section>
     ${feature_item('filter-all',
