Add VValidatedJSON validator for checking schema'd json data.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6593,6 +6593,10 @@ body:not(.gold) .allminus-link {
     width: 50%;
 }
 
+.api-help .parameters td pre {
+    margin: .5em 0;
+}
+
 #classy-error {
     text-align: center;
 }
