Gold partners: add giveaway rules/terms

--- a/r2/r2/public/static/css/goldinfo.less
+++ b/r2/r2/public/static/css/goldinfo.less
@@ -411,6 +411,43 @@ section#about-gold, section#about-gold-partners {
         }
     }
 
+    section#terms {
+        text-align: center;
+        
+        #giveaway-rules {
+            display: none;
+            text-align: left;
+
+            h2 {
+                text-align: center;
+                font-size: 2em;
+                color: #000;
+            }
+
+            h3 {
+                margin-top: 1em;
+                font-size: small;
+            }
+
+            p {
+                font-size: x-small;
+            }
+        }
+
+        #prize-details {
+            display: none;
+
+            ul {
+                margin-left: 20px;
+                list-style-type: disc;
+            }
+
+            ul li {
+                font-size: x-small;
+            }
+        }
+    }
+
     footer {
         @height: 159px;
         @padding-top: 6px;
