--- a/r2/r2/templates/preffeeds.html
+++ b/r2/r2/templates/preffeeds.html
@@ -105,6 +105,25 @@ ${unsafe(safemarkdown(_("All feeds are invalidated if you change your password, 
       ${_("unread messages")}
     </td>
   </tr>
+  <tr>
+    <th>moderator listings</th>
+    <td class="prefright">
+      <%self:feedbuttons path="/r/mod/about/modqueue/"></%self:feedbuttons>
+      ${_("modqueue")}
+      <br/>
+      <%self:feedbuttons path="/r/mod/about/reports/"></%self:feedbuttons>
+      ${_("reports")}
+      <br/>
+      <%self:feedbuttons path="/r/mod/about/spam/"></%self:feedbuttons>
+      ${_("spam")}
+      <br/>
+      <%self:feedbuttons path="/r/mod/about/log/"></%self:feedbuttons>
+      ${_("moderation log")}
+      <br/>
+      <%self:feedbuttons path="/r/mod/about/unmoderated/"></%self:feedbuttons>
+      ${_("unmoderated links")}
+    </td>
+  </tr>
   %endif
 </table>
 </div>
