Add multireddit subreddits to the submit page.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3811,8 +3811,10 @@ ul#image-preview-list .description pre {
     font-size: small;
 }
 
-#suggested-reddits ul {
-
+#suggested-reddits h3 {
+    font-size: 1em;
+    font-weight: normal;
+    margin-top: .5em;
 }
 
 #suggested-reddits li {
