/gold/about: Fixed missing whitespace.

--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -68,7 +68,7 @@
       <p>${description}</p>
     % endif
     <div class="actions">
-      <a class="buy-gold-button" href="/gold">${_('buy reddit gold')}</a>
+      <a class="buy-gold-button" href="/gold">${_('buy reddit gold')}</a>&#32;
       <span class="or">${_('or')}</span>
       <a class="postcard-button" href="/gold/about#postcard"><img src="${static('gold/stamp.png')}" alt=""> ${_('send us a postcard')}</a>
     </div>
